implementa CRUD completo do Autor
