# server/app.js
@@ -2,7 +2,7 @@ import express from "express";
 import categoriaRoute from "./routes/categoriaRoute.js";
 import swaggerUi from "swagger-ui-express";
 import swaggerFile from "./outputSwagger.json" with { type: "json" };
-
+import autorRoute from "./routes/autorRoute.js";
 const app = express();
 
 app.use(express.json());
@@ -12,5 +12,5 @@ app.use(
     swaggerUi.setup(swaggerFile)
 );
 app.use("/categorias",categoriaRoute);
-
+app.use("/autor",autorRoute);
 export default app;
