# server/routes/categoriaRoute.js
@@ -4,39 +4,44 @@ import CategoriaController from '../controllers/CategoriaController.js';
 const router = express.Router();
 
 let ctrl = new CategoriaController();
-/*  #swagger.tags = ['Categorias']
-    #swagger.summary = 'Lista todas as categorias'
-    #swagger.description = 'Retorna todas as categorias cadastradas.'
-*/
+
 router.get("/", (req, res) => {
+    /*  #swagger.tags = ['Categorias']
+        #swagger.summary = 'Lista todas as categorias'
+        #swagger.description = 'Retorna todas as categorias cadastradas.'
+    */
     ctrl.listar(req, res);
 });
-/*  #swagger.tags = ['Categorias']
-    #swagger.summary = 'Cadastra categorias'
-    #swagger.description = 'Cadastra uma nova categoria.'
-*/
+
 router.post("/", (req, res) => {
+    /*  #swagger.tags = ['Categorias']
+        #swagger.summary = 'Cadastra categorias'
+        #swagger.description = 'Cadastra uma nova categoria.'
+    */
     ctrl.gravar(req, res);
 });
-/*  #swagger.tags = ['Categorias']
-    #swagger.summary = 'Atualiza uma categoria'
-    #swagger.description = 'Atualiza a categoria desejada'
-*/
+
 router.put("/:id", (req, res) => {
+    /*  #swagger.tags = ['Categorias']
+        #swagger.summary = 'Atualiza uma categoria'
+        #swagger.description = 'Atualiza a categoria desejada'
+    */
     ctrl.atualizar(req, res);
 });
-/*  #swagger.tags = ['Categorias']
-    #swagger.summary = 'Lista certas categorias'
-    #swagger.description = 'Retorna todas as categorias cadastradas de acordo com o parametro.'
-*/
+
 router.get("/:id", (req, res) => {
+    /*  #swagger.tags = ['Categorias']
+        #swagger.summary = 'Busca uma categoria pelo id'
+        #swagger.description = 'Retorna todas as categorias cadastradas de acordo com o parametro.'
+    */
     ctrl.obter(req, res);
 });
-/*  #swagger.tags = ['Categorias']
-    #swagger.summary = 'Deleta uma categoria'
-    #swagger.description = 'Deleta a categoria desejada'
-*/
+
 router.delete("/:id", (req, res) => {
+    /*  #swagger.tags = ['Categorias']
+        #swagger.summary = 'Deleta uma categoria'
+        #swagger.description = 'Deleta a categoria desejada'
+    */
     ctrl.deletar(req, res);
 });
 
